--- a/css/sidebar.css
+++ b/css/sidebar.css
@@ -1,5 +1,5 @@
-@font-face {font-family: "SyneMono"; src: url('../fonts/SyneMono-Regular.ttf');}
-body {font-family: "SyneMono";}
+@font-face {font-family: "ShareTech"; src: url('../fonts/ShareTechMono-Regular.ttf');}
+body {font-family: "ShareTech";}
 
-body {margin: 8px; background-color: #222831; color: #EEEEEE;}
+body {margin: 8px; background-color: #222831; color: #EEEEEE; font-size: 16px;}
 .sidebarSectionHeader {margin: 0 10px 0; padding: 0; font-size: 24px;}
