--- a/css/tabs.css
+++ b/css/tabs.css
@@ -1,23 +1,26 @@
 #tabs {
   min-width: 350px;
+  line-height: 24px;
 }
 
 #tabs .tab {
-  height: 32px;
+  height: 24px;
+  margin-bottom: 5px;
 }
 
 #tabs .tab img {
-  height: 16px;
-  width: 16px;
+  height: 24px;
+  width: auto;
 }
 
 #tabs .tab img.closeIcon {
   float: right;
 }
 
+#tabs .tab img.tabFavIcon {float: left; margin-right: 10px;}
+
 #tabs .tab span.tabTitle {
   display: inline-block;
-  height: 30px;
   width: 300px;
   white-space: nowrap;
   overflow: hidden;
