--- a/css/sidebar.css
+++ b/css/sidebar.css
@@ -1,10 +1,34 @@
 @font-face {font-family: "ShareTech"; src: url('../fonts/ShareTechMono-Regular.ttf');}
-body {font-family: "ShareTech";}
+body {font-family: 'ShareTech';}
 
-body {margin: 8px; background-color: #222831; color: #FFD369; font-size: 16px;}
-.sidebarSectionHeader {margin: 0 10px 0; padding: 0; font-size: 24px;}
+body {margin: 0; background-color: #212121; color: #f7f6e7; font-size: 12px;}
+.sidebarSectionHeader {margin: 10px; padding: 0; font-size: 24px;}
+.sidebarSectionHeader i {
+  font-size: 12px;
+  color: lime;
+  line-height: 24px;
+  float: right;
+  margin-left: 10px;
+}
 
 #templates {display: none;}
+
+.lineItem {
+  line-height: 24px;
+  height: 24px;
+}
+
+.lineItem img {
+  height: 18px;
+  width: 18px;
+}
+
+.lineItem .lineContent {
+  display: inline-block;
+  white-space: nowrap;
+  overflow: hidden;
+  text-overflow: ellipsis;
+}
 
 #refreshButton{
   position: absolute;
