--- a/css/tabs.css
+++ b/css/tabs.css
@@ -1,34 +1,30 @@
-#tabsHeader {text-align: center;}
-
-#tabs {
-  min-width: 360px;
-  line-height: 24px;
-}
-
-#tabs .tab {
-  height: 24px;
-  margin-bottom: 5px;
-}
-
-#tabs .tab img {
-  height: 24px;
-  width: auto;
-}
-
-#tabs .tab img.tabCloseIcon {
+.tabIcons {
   float: right;
+  margin-right: 10px;
+  height: 24px;
 }
 
-#tabs .tab img.tabFavIcon {float: left; margin-right: 10px;}
-
-#tabs .tab span.tabTitle {
-  display: inline-block;
-  width: 75%;
-  white-space: nowrap;
-  overflow: hidden;
-  text-overflow: ellipsis;
+.tabIcons i {
+  line-height: 24px;
+  margin-left: 5px;
 }
 
-#tabs .tab.active {
-  background: #393E46;
+.tabIcons i.tabCloseIcon {
+  color: red;
 }
+
+.tabIcons i.tabIdentity {
+  width: 16px;
+  height: 16px;
+  float: left;
+  margin: 3px 3px 0;
+}
+
+#tabs .tab img.tabFavIcon {
+  float: left;
+  margin: 3px;
+}
+
+#tabs .tab span.tabTitle {width: 250px;}
+
+#tabs .tab.active {background: #393e46;}
